--- a/index.html
+++ b/index.html
@@ -3,185 +3,87 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drovexra - Where Business Execute</title>
-  <script type="module">
-    // ---------------- Firebase Setup ----------------
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-app.js";
-    import { getDatabase, ref, push } from "https://www.gstatic.com/firebasejs/10.8.1/firebase-database.js";
-
-    // 🔑 Your Firebase Config (from you)
-    const firebaseConfig = {
-      apiKey: "AIzaSyD7ch3RqvHQqtx7qtCt7my2sI5nVi-VXkk",
-      authDomain: "drovexra-d04d2.firebaseapp.com",
-      projectId: "drovexra-d04d2",
-      storageBucket: "drovexra-d04d2.firebasestorage.app",
-      messagingSenderId: "151024493370",
-      appId: "1:151024493370:web:6e26e29ad7a4775bc42603",
-      measurementId: "G-G500V1R7KS"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const database = getDatabase(app);
-
-    // Email save karne ka function
-    window.saveEmail = function() {
-      const emailInput = document.getElementById("emailInput");
-      const email = emailInput.value;
-
-      if (email) {
-        push(ref(database, "emails"), { email });
-        alert("🎉 Email saved successfully!");
-        emailInput.value = "";
-        document.getElementById("popup").style.display = "none";
-      } else {
-        alert("⚠️ Please enter a valid email!");
-      }
-    }
-  </script>
-
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Poppins', sans-serif;
-      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
-      color: white;
-      text-align: center;
-    }
-
-    header {
-      padding: 40px 20px;
-    }
-
-    header h1 {
-      font-size: 3rem;
-      margin: 0;
-      color: #00ffcc;
-    }
-
-    header p {
-      font-size: 1.2rem;
-      margin-top: 10px;
-      color: #ccc;
-    }
-
-    .options {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-      gap: 20px;
-      margin: 40px;
-    }
-
-    .option-box {
-      background: rgba(255, 255, 255, 0.1);
-      border-radius: 15px;
-      padding: 40px 20px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: transform 0.3s, background 0.3s;
-    }
-
-    .option-box:hover {
-      transform: scale(1.05);
-      background: rgba(0, 255, 204, 0.2);
-    }
-
-    .paragraph {
-      max-width: 800px;
-      margin: 40px auto;
-      font-size: 1rem;
-      line-height: 1.6;
-      color: #ddd;
-    }
-
-    .cta {
-      margin: 30px;
-    }
-
-    .cta button {
-      background: #00ffcc;
-      border: none;
-      padding: 15px 40px;
-      border-radius: 30px;
-      font-size: 1.2rem;
-      font-weight: bold;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    .cta button:hover {
-      background: #00bfa5;
-    }
-
-    /* Popup */
-    #popup {
-      display: none;
-      position: fixed;
-      top: 0; left: 0;
-      width: 100%; height: 100%;
-      background: rgba(0,0,0,0.7);
-      align-items: center;
-      justify-content: center;
-    }
-
-    .popup-content {
-      background: #1a1a1a;
-      padding: 30px;
-      border-radius: 15px;
-      text-align: center;
-    }
-
-    .popup-content input {
-      padding: 10px;
-      width: 80%;
-      margin-bottom: 15px;
-      border: none;
-      border-radius: 10px;
-    }
-
-    .popup-content button {
-      background: #00ffcc;
-      border: none;
-      padding: 10px 25px;
-      border-radius: 10px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-  </style>
+  <title>Drovexra | Where Business Execute</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <header>
-    <h1>Drovexra</h1>
-    <p>Where Business Execute</p>
+    <h1 class="logo">Drovexra</h1>
+    <p class="tagline">Where Business Execute</p>
   </header>
 
-  <div class="options">
-    <div class="option-box" onclick="document.getElementById('popup').style.display='flex'">Learn Skill</div>
-    <div class="option-box" onclick="document.getElementById('popup').style.display='flex'">Custom Idea</div>
-    <div class="option-box" onclick="document.getElementById('popup').style.display='flex'">Digital Product</div>
-    <div class="option-box" onclick="document.getElementById('popup').style.display='flex'">Dropshipping</div>
-  </div>
+  <section class="options">
+    <button onclick="openTerms('start.html')">Start Now</button>
+    <button onclick="openTerms('learning.html')">Learning</button>
+    <button onclick="openTerms('digital.html')">Digital Product</button>
+    <button onclick="openTerms('dropshipping.html')">Dropshipping</button>
+  </section>
 
-  <div class="paragraph">
-    Drovexra is a futuristic platform built to empower creators, entrepreneurs, and dreamers to achieve limitless growth. We believe that innovation and execution should go hand in hand, and that’s why Drovexra brings together tools, resources, and opportunities under one ecosystem. Whether it’s building skills, scaling a business, or exploring new ventures, Drovexra is designed to turn visions into reality. Our mission is simple — to create a space where ideas meet action and growth has no boundaries.
-  </div>
+  <section class="about">
+    <p>
+      Drovexra is a futuristic platform built to empower creators, entrepreneurs, and dreamers 
+      to achieve limitless growth. We believe that innovation and execution should go hand in hand, 
+      and that’s why Drovexra brings together tools, resources, and opportunities under one ecosystem. 
+      Whether it’s building skills, scaling a business, or exploring new ventures, Drovexra is designed 
+      to turn visions into reality. Our mission is simple — to create a space where ideas meet action and growth has no boundaries.
+    </p>
+  </section>
 
-  <div class="cta">
-    <button onclick="document.getElementById('popup').style.display='flex'">Start Now</button>
-  </div>
-
-  <!-- Popup -->
-  <div id="popup">
-    <div class="popup-content">
-      <h2>Enter Your Email</h2>
-      <input type="email" id="emailInput" placeholder="Enter your email" />
-      <br>
-      <button onclick="saveEmail()">Submit</button>
-      <br><br>
-      <button onclick="document.getElementById('popup').style.display='none'">Close</button>
+  <!-- Terms Modal -->
+  <div id="termsModal" class="modal">
+    <div class="modal-content">
+      <h2>Terms & Conditions</h2>
+      <div class="terms-text">
+        <!-- Scrollable Terms -->
+        <p>
+          1. Platform Role & Disclaimer<br>
+          Drovexra is a technology platform only.<br><br>
+          2. No Warranty & No Guarantee<br>
+          Drovexra does not guarantee sales, profits, or accuracy of any content.<br><br>
+          3. Limitation of Liability<br>
+          Drovexra is not liable for any direct or indirect losses.<br><br>
+          4. User Acknowledgment<br>
+          Users accept all risks involved in online transactions, services, and investments.<br><br>
+          5. Indemnification<br>
+          Users agree to indemnify and hold harmless Drovexra.<br><br>
+          6. Transactions & Commission<br>
+          Drovexra charges 10% commission for safe transactions.<br><br>
+          7. Investments Disclaimer<br>
+          Investments are high-risk activities. No guarantee of profit.<br><br>
+          8. Binding Arbitration & Jurisdiction<br>
+          All disputes resolved through binding arbitration.<br><br>
+          9. Termination of Accounts<br>
+          Drovexra reserves the right to suspend accounts involved in fraud or misuse.
+        </p>
+      </div>
+      <label><input type="checkbox" id="agreeCheck"> I agree to the Terms & Conditions</label>
+      <div class="modal-actions">
+        <button onclick="proceed()">Proceed</button>
+        <button class="cancel" onclick="closeTerms()">Cancel</button>
+      </div>
     </div>
   </div>
 
+  <script>
+    let nextPage = "";
+
+    function openTerms(page) {
+      nextPage = page;
+      document.getElementById("termsModal").style.display = "flex";
+    }
+
+    function closeTerms() {
+      document.getElementById("termsModal").style.display = "none";
+      document.getElementById("agreeCheck").checked = false;
+    }
+
+    function proceed() {
+      if (document.getElementById("agreeCheck").checked) {
+        window.location.href = nextPage;
+      } else {
+        alert("Please accept the Terms & Conditions to continue.");
+      }
+    }
+  </script>
 </body>
 </html>
