--- a/index.html
+++ b/index.html
@@ -3,40 +3,32 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Drovexra</title>
+  <title>Drovexra - Where Business Execute</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <!-- Header -->
-    <header>
-      <div class="logo">DROVEXRA</div>
-      <a href="start.html" class="btn start-btn">Start Now</a>
-    </header>
-
-    <!-- Hero Section -->
-    <main>
-      <h1>Where Business <span>Execute</span></h1>
-
-      <!-- Navigation Buttons -->
-      <div class="nav-buttons">
+  <!-- Hero Section -->
+  <header class="hero">
+    <div class="overlay"></div>
+    <div class="hero-content">
+      <h1 class="title">Drovexra</h1>
+      <p class="tagline">Where Business Execute</p>
+      <div class="buttons">
+        <a href="start.html" class="btn">Start Now</a>
         <a href="learning.html" class="btn">Learn Skill</a>
-        <a href="idea.html" class="btn">Custom Idea</a>
-        <a href="product.html" class="btn">Digital Product</a>
+        <a href="custom.html" class="btn">Custom Idea</a>
+        <a href="digital.html" class="btn">Digital Product</a>
         <a href="dropshipping.html" class="btn">Dropshipping</a>
       </div>
-
-      <!-- Paragraph -->
-      <p class="description">
-        Drovexra is a futuristic platform built to empower creators, entrepreneurs, 
-        and dreamers to achieve limitless growth. We believe that innovation and 
-        execution should go hand in hand, and that’s why Drovexra brings together 
-        tools, resources, and opportunities under one ecosystem. Whether it’s building 
-        skills, scaling a business, or exploring new ventures, Drovexra is designed 
-        to turn visions into reality. Our mission is simple — to create a space 
-        where ideas meet action and growth has no boundaries.
+      <p class="desc">
+        Drovexra is a futuristic platform built to empower creators and entrepreneurs 
+        with tools, strategies, and execution support to take their vision from zero to reality.
       </p>
-    </main>
-  </div>
+    </div>
+  </header>
+
+  <footer>
+    <p>© 2025 Drovexra. All rights reserved.</p>
+  </footer>
 </body>
 </html>
